fix padding issue on narrow devices

--- a/frontend/src/components/ChatContainer/ChatContainer.module.css
+++ b/frontend/src/components/ChatContainer/ChatContainer.module.css
@@ -7,7 +7,8 @@
   /* For narrower screens */
   height: 100%;
   width: 100%;
-  padding: 0px;
+  padding: 20px;
+  box-sizing: border-box;
 
   /* For wider screens */
   @media (min-width: 550px) {
@@ -15,6 +16,5 @@
     width: 500px;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    padding: 20px;
   }
 }
